2012-02-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/ouput.py: Added support for bad-words filtering.
	* window.py, gfeedline.glade: Added a menu item of 'All Tabs to the
	  Bottom'.

2012-02-04  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py, window.py: Enabled to toggle multi-column mode.

2012-02-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py, window.py: Added support for multi-column.

2012-02-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* retweet.png: Added a retweet icon.

2012-01-31  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* window.py: Added support for auto start & geometry saving.
	* preferences.py: Save recents tab.
	* tweetentry.py, menu.py: Added support for Retweet.
	* autostart.py: Added support for auto start.
	* ja.po: Added Japanese translation.

2012-01-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.1 release.

2012-01-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* window.py: Added auto control of scrolling.  Added support for
	  user icons on notifications.

2012-01-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gfeedline.desktop.in: Added a Desktop entry.
	* setup.py: Added an installation schema.
	* twittytwister: Include the module.
	* window.py: Added a context menu item for 'Search Google'.

2012-01-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* updatewindow.py, update.glade: Added support for updating statuses.
	* twitter/api.py: Added support for recieving Direct Messages.
	* utils/htmlentities.py: Code refactoring.

2012-01-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* notification.py: Added support for Desktop Notification.
	* constants.py: Added constants class.
	* nullobject.py: Added null object class.
	* twitter/api.py: Added support for Search API.

2012-01-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py: Added support for feedlist store drag & drop.

2012-01-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
